# bakery

./: .gitignore  .gitmodules  BACKEND.md  BETTER_SOLUTION.md  BUILD_STATUS.md  CACHE-BUSTING.md  CHANGELOG.md  CMakeLists.txt  COMPRESSION_COMPARISON.md  CONTRIBUTING.md  CROSS_COMPILE.md  Dockerfile.linux  EMBEDDED-ASSETS-PLAN.md  FINAL-PLAN.md  FINAL_OPTIMIZATIONS.md  FRAMEWORK_COMPARISON.md  GAME-MODE.md  HONEST_COMPARISON.md  HYBRID_SOLUTION.md  LICENSE  Makefile  OPTIMIZATION_PLAN.md  PERFORMANCE-MACOS.md  PERFORMANCE.md  PERFORMANCE_FIX.md  PERFORMANCE_OPTIMIZATIONS.md  PRECOMPILED-RUNTIME-PLAN.md  RAMDISK_SOLUTION.md  README.md  REALITY_CHECK.md  RUNTIME.md  SINGLE-BINARY-PLAN.md  SIZE_COMPARISON.md  SOCKET_RUNTIME_SOLUTION.md  STATUS.md  STEAMWORKS-DEPLOYMENT.md  STEAMWORKS.md  SUCCESS.md  SUMMARY.md  UNIVERSAL_BINARY_PROBLEM.md  (+19 more)
.github/workflows/: build-binaries.yml  build-linux-binaries.yml  ci.yml
Runner/runner.AppDir/: runner.desktop
assets/: splash.html
docs/: ARCHITECTURE.md  CROSS-PLATFORM-BUILDS.md  GETTING_STARTED.md  LINUX-BUILD-ANLEITUNG.md  LINUX-BUILDS.md  OFFLINE-USAGE.md  PERFORMANCE-MACOS.md  PERFORMANCE.md  STEAMWORKS-DEPLOYMENT.md  STEAMWORKS.md
examples/backend-example/: main.js
examples/backend-minimal/: main.js
examples/backend-simple/: main.js
examples/candy-catch/: .bakery.config.json.tmp  bakery.config.js  gemcore.config.js
examples/candy-catch/src/: game-bundled.js  index-bundled.html  index-cdn.html  index-fast.html  index-lazy.html  index.html  test-inline.html  test-minimal.html  test-simple.html  test.html
examples/hello-world/: main.ts  package.json
examples/hello-world-socket/: .gitignore  bakery.config.js  sea-config.json  sea-prep.blob  socket.ini
examples/hello-world-socket/backend/: index.cjs  index.js
examples/hello-world-socket/dist-embedded/: index.html
examples/hello-world-socket/src/: bakery-api.js  bakery-init.js  bakery-window.js  index-bakery.html  index-native.html  index-node.html  index.html
examples/ipc-demo/: main.ts
examples/jslegend/: bakery.config.js  gemcore.config.js
examples/jslegend/src/: index.html  map-zones.json
examples/phaser-steamworks/: bakery.config.js  package-lock.json  package.json
examples/phaser-steamworks/src/: game.js  index.html
examples/runner/: gemcore.config.js
examples/steamdemo/: bakery.config.js  gemcore.config.js  icon.icns
examples/steamdemo/assets/: icon.icns
examples/stress-test/: bakery.config.js  gemcore.config.js
examples/test-3d/: bakery.config.js  bakery.config.json
examples/windows-test/: .bakery.config.json.tmp  bakery.config.js
launcher/: CMakeLists.txt  bakery-asset-loader.h  bakery-cache-buster.h  bakery-config-reader.cpp  bakery-dev.cpp  bakery-http-server.h  bakery-launcher-headless.cpp  bakery-launcher-linux.cpp  bakery-launcher-mac-shared.cpp  bakery-launcher-mac.cpp  bakery-launcher-shared.cpp  bakery-launcher-win.cpp  bakery-launcher-windows.cpp  bakery-launcher.cpp  bakery-native-final.cpp  bakery-native.cpp  bakery-simple.cpp  bakery-steamworks-bindings.h  bakery-steamworks-bindings.h.bak  bakery-steamworks-wrapper.js  bakery-steamworks.cpp  bakery-steamworks.h  bakery-universal-launcher-linux-embedded.cpp  bakery-universal-launcher-linux.cpp  bakery-universal-launcher-windows-embedded.cpp  bakery-universal-launcher-windows.cpp  bakery-universal-launcher.cpp  bakery-window-helper.h  bakery-with-socket.cpp  bakery.config.json  base64-simd.h  gemcore-assets  launcher-postject.cpp  launcher.cpp  launcher.ts  main.cpp  platform-macos.h  steam-api-stubs.cpp  test-inline.cpp  test-native-simple.cpp  (+5 more)
launcher/assets/: bakery-webgpu-helper.js  gemcore-webgpu-helper.js
launcher/cmake/: x86_64-linux-gnu.cmake
launcher/prebuilt/: bakery-launcher-linux-arm64  bakery-launcher-linux-x64  bakery-universal-launcher-linux-embedded  bakery-universal-launcher-linux-embedded-arm64
launcher/prebuilt/linux/: README.md  gemcore-launcher-linux-arm64  gemcore-launcher-linux-x64
launcher/prebuilt/macos/: gemcore-launcher-mac-universal
launcher/shared/: bakery-http-server.h  bakery-window-helper.h  gemcore-asset-loader.h  gemcore-cache-buster.h  gemcore-http-server.h  gemcore-window-helper.h  webkit-dynamic-loader.h  webview-universal-performance.h
launcher/steamworks/: bakery-steamworks-api.js  bakery-steamworks.cpp  gemcore-steamworks-api.js  gemcore-steamworks-bindings.h  gemcore-steamworks-wrapper.js  gemcore-steamworks.cpp  gemcore-steamworks.h  steam-api-stubs.cpp
launcher/universal/: bakery-universal-launcher-linux-embedded.cpp  bakery-universal-launcher-windows-embedded.cpp  gemcore-universal-launcher-linux-embedded.cpp  gemcore-universal-launcher-linux.cpp  gemcore-universal-launcher-windows-embedded.cpp  gemcore-universal-launcher.cpp
lib/: bakery-reload.ts  bakery.ts  dev-server.ts  embedded-webview-data.ts  embedded-webview.ts  webview-ffi.ts
native/: CMakeLists.txt  main.cpp
runtime/: bakery-runtime.js
scripts/: build-all-platforms.sh  build-and-commit-linux-binaries.sh  build-bakery.ts  build-deb-native.ts  build-fat-binary.sh  build-launchers.ts  build-linux-appimage.sh  build-linux-crossplatform.sh  build-linux-deb-standalone.sh  build-linux-deb.sh  build-linux-docker.sh  build-linux-separate.sh  build-linux-simple.sh  build-linux-single-binary.sh  build-linux-single-executables.sh  build-linux-single.sh  build-linux-universal.sh  build-linux-zig.sh  build-linux.sh  build-minimal-universal.sh  build-native-universal.sh  build-native.ts  build-runtime.ts  build-shared-universal.sh  build-true-universal.sh  build-universal-minimal.sh  build-universal-shared.sh  build-universal.sh  build-windows-shared.sh  build-windows-single-exe.sh  build-windows-single.sh  build-windows-universal.sh  build-windows.sh  build-with-postject.ts  build.ts  bundle-assets.ts  convert-config-to-json.ts  convert-icon.ts  dev-server-socket.ts  dev-server.ts  (+23 more)
src/: main.c
src/api/: app.c  app.h  window.c  window.h
src/ipc/: zero_copy.c  zero_copy.h
src/runtime/: txiki_wrapper.c  txiki_wrapper.h
src/webview/: webview_ffi.c  webview_ffi.h
(+8 files in other folders)
